# hw3-jocypl

./: Makefile  README.md  environment.yml  myst.yml  myst_backup.yml  pyproject.toml
ligotools.egg-info/: PKG-INFO  SOURCES.txt
